# bazel-training

./: .gitignore
exercises/hands-on_1/: basic-concepts.md  importance-gazelle.md  readme.md  training.md
exercises/hands-on_1/modern-bazel-demo/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod
exercises/hands-on_1/modern-bazel-demo/cmd/hello/: BUILD.bazel  main.go
exercises/hands-on_1/modern-bazel-demo/pkg/calculator/: BUILD.bazel  calculator.go  calculator_test.go
exercises/hands-on_2/: readme.md
exercises/hands-on_2/my-grpc-service/: MODULE.bazel
exercises/hands-on_2/my-grpc-service/client/: BILD.bazel  main.go
exercises/hands-on_2/my-grpc-service/proto/: BUILD.bazel  greeter.proto
exercises/hands-on_2/my-grpc-service/server/: BUILD.bazel  main.go
