"my-grpc-service"

module(
    name = "my-grpc-service",
    version = "0.1",
)

bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "gazelle", version = "0.35.0")

# Protobuf
bazel_dep(name = "protobuf", version = "26.0.bcr.2", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.66.0.bcr.3", repo_name = "com_github_grpc_grpc")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_golang_protobuf",
    "google_golang_org_grpc",
)
