load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "example.com/my-grpc-service/client",
    deps = [
        "//proto/greeter:greeter_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@google_golang_org_grpc//:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)