load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "example.com/my-grpc-service/server",
    deps = [
        "//proto/greeter:greeter_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@google_golang_org_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)